// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkFee renders a NetworkFee in a loading state 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Network fee
  </Text>
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          },
          {
            "backgroundColor": "#3939391a",
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.2}
        style={
          [
            {
              "color": "#222222",
              "display": "flex",
              "fontFamily": "Basel-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#393939",
              "paddingTop": 1,
            },
          ]
        }
      >
        Ethereum
      </Text>
    </View>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 24,
          },
        ]
      }
    >
      •
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <View
      sentry-label="SpinningLoader"
      style={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 0,
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
    >
      <svg
        color="#222222"
        data-file-name="SvgCircleSpinner"
        height={20}
        width={20}
      />
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee normally 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Network fee
  </Text>
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          },
          {
            "backgroundColor": "#3939391a",
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.2}
        style={
          [
            {
              "color": "#222222",
              "display": "flex",
              "fontFamily": "Basel-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#393939",
              "paddingTop": 1,
            },
          ]
        }
      >
        Ethereum
      </Text>
    </View>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 24,
          },
        ]
      }
    >
      •
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.4}
        style={
          [
            {
              "color": "#222222",
              "display": "flex",
              "fontFamily": "Basel-Book",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 24,
            },
          ]
        }
      >
        $500.00
      </Text>
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee with a warning 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Network fee
  </Text>
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          },
          {
            "backgroundColor": "#3939391a",
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.2}
        style={
          [
            {
              "color": "#222222",
              "display": "flex",
              "fontFamily": "Basel-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#393939",
              "paddingTop": 1,
            },
          ]
        }
      >
        Ethereum
      </Text>
    </View>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 24,
          },
        ]
      }
    >
      •
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
    />
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.4}
        style={
          [
            {
              "color": "#FEB239",
              "display": "flex",
              "fontFamily": "Basel-Book",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 24,
            },
          ]
        }
      >
        $500.00
      </Text>
      <View
        style={
          [
            {
              "display": "flex",
              "marginLeft": 4,
            },
          ]
        }
      >
        <svg
          color="#FEB239"
          data-file-name="SvgInfoCircle"
          height={20}
          width={20}
        />
      </View>
    </View>
  </View>
</View>
`;
